--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                     <span class="d-block">ARE</span>
                     <span class="advocate_text color_bittersweet">ADVOCATES</span>
                 </h2>
-                <a class="scroll_down position-absolute" href="#"><img class="w-100"
+                <a class="scroll_down position-absolute" href="#advise"><img class="w-100"
                         src="/assests/images/header/scroll-down.svg" alt="scroll_down"></a>
             </div>
         </div>
@@ -90,7 +90,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             alt="bf-logo">
     </main>
     <!-- advise section  -->
-    <div class="position-relative py-md-5">
+    <div class="position-relative py-md-5" id="advise">
         <div class="custom_container container mx-auto">
             <h2 class="advise fs_5xl text-black fw-bold mx-auto"><span class="color_bittersweet"><span class="d-block">
                         We advise
@@ -113,7 +113,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3">
                 <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 real_estate_deals">
                     <div class="ms-sm-4">
-                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                        <h5
+                            class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
@@ -156,7 +157,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="col-sm-6 col-lg-7 col-12 pt-4 pb-4 pe-md-3 pe-md-0 pe-3 ps-md-5 pb-4">
                 <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 corporate_deals">
                     <div class="ms-sm-4">
-                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-white mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
@@ -201,7 +202,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3">
                 <div class="py-xl-5 py-lg-4 pe-xl-5 pe-lg-4 pe-md-4 ms-lg-4 construction_deals">
                     <div class="ms-sm-4">
-                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
