ui issues solving

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                 <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 real_estate_deals">
                     <div class="ms-sm-4">
                         <h5
-                            class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
+                            class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with forward_line position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
@@ -157,7 +157,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="col-sm-6 col-lg-7 col-12 pt-4 pb-4 pe-md-3 pe-md-0 pe-3 ps-md-5 pb-4">
                 <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 corporate_deals">
                     <div class="ms-sm-4">
-                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
+                        <h5
+                            class="letter_03 text-uppercase color_bittersweet forward_line ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-white mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
@@ -202,7 +203,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3">
                 <div class="py-xl-5 py-lg-4 pe-xl-5 pe-lg-4 pe-md-4 ms-lg-4 construction_deals">
                     <div class="ms-sm-4">
-                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
+                        <h5
+                            class="letter_03 text-uppercase color_bittersweet forward_line ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
                             We deal with
                         </h5>
                         <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
@@ -375,7 +377,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                         experienced litigator and problem solver who has
                         represented clients in a wide variety of forums throughout New
                         York City.</p>
-                    <p class="attorney_text text-white fw-normal pt-sm-5 pt-4 mt-xl-2 mb-0 fs_lg lh_100">Attorney Milad
+                    <p class="attorney_text text-white fw-normal pt-sm-5 pt-4 mb-0 fs_lg lh_100">Attorney Milad
                         Boddoohi
                     </p>
                     <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold">Partner & Co-Founder</p>
@@ -454,7 +456,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <img src="./assests/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
         </div>
         <div class="Cheryl_main_parent mt-sm-5 pt-5 pe-xl-0 pe-4">
-            <h3 class="Cheryl_para text-black letter_0-3 lh_100 fw-bold fs_2xl mb-2">
+            <h3 class="Cheryl_para text-black letter_0-3 lh_100 fw-bold fs_2xl mb-0">
                 Cheryl has represented a
                 wide variety of clients in
                 transactional matters, from
