--- a/Footer.html
+++ b/Footer.html
@@ -13,8 +13,6 @@
 </head>
 
 <body>
-
-  
         <section class="bg-black">
             <div class="container main-container p-sm-0 AnythingYou_py  ">
                 <div class="row align-items-center m-0 p-0 position-relative section-margin">
@@ -62,7 +60,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 animation-element bounce-up z_index_10">
-                        <form onsubmit="handleSubmit(event)">
+                        <form>
                             <div class="w-100">
                                 <input type="text" required class="contact_form" id="contact-form-name" placeholder="Your Name" />
                             </div>
@@ -89,25 +87,25 @@
         </section>
         <footer class="bg_black">
             <div class="container  p-0 animation-element bounce-down">
-                <div class="row m-0 p-0 position-relative subject">
-                    <div class="col-sm-3 p-sm-0 desktop">
+                <div class="row justify-content-center position-relative m-0 p-0 position-relative subject">
+                    <div class="col-lg-3 p-sm-0 position_sm_absolute">
                         <img src="./assests/images/icons/footer-img.svg" />
                     </div>
-                    <div class="col-sm-9 mt-sm-5 p-0 pb-sm-0 pb-5">
+                    <div class="col-lg-9 mt-sm-5 p-0 pb-sm-0 pb-5">
                         <div class="mt-sm-5 pt-sm-5">
                             <div class="item-center">
                                 <a href="index.html"><img class="header_logo" src="./assests/images/icons/logo.svg" /></a>
                             </div>
                             <hr class="grey-hr background-white w-100 my-4 mt-5" />
-                            <div class="d-flex flex-wrap  justify-content-between mt-2 m-flex-column item-center">
-                                <div class="d-flex flex-wrap m-flex-column m-text-center links">
+                            <div class=" d-lg-flex justify-content-between mt-2 m-flex-column item-center">
+                                <div class="d-flex flex-column flex-sm-row align-items-center gap-3 gap-sm-0 justify-content-center justify-content-lg-start links">
                                     <a class="transition_03s" href="#banner-top">Back to Top</a>
                                     <a href="./index.html#practice" class="ms-sm-5 transition_03s">Practice Areas</a>
                                     <a href="news.html" class="ms-sm-5 transition_03s">News</a>
                                     <a href="attorney-details.html" class="ms-sm-5 transition_03s">Team</a>
                                     <a href="#contact" class="ms-sm-5 transition_03s">Contact</a>
                                 </div>
-                                <div class="m-left d-flex mt-sm-0 mt-4">
+                                <div class="m-left d-flex justify-content-center justify-content-lg-start mt-lg-0 my-4">
                                     <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank">
                                         <svg class="transition_03s" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -132,7 +130,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="d-flex flex-wrap mt-sm-2 mt-4 pt-3 pt-sm-0 m-flex-column item-center pb-2">
+                            <div class=" text-center d-lg-flex   mt-sm-2 mt-4 pt-3 pt-sm-0 m-flex-column item-center pb-2">
                                 <p class="font-13 font-500 color_white font-opacity1 mb-0">
                                     © Boddoohi & Friedlander LLP 2022.
                                 </p>
