ui issues solved

--- a/index.html
+++ b/index.html
@@ -282,87 +282,91 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             </div>
         </div>
     </div>
-    <div class="container mx-auto position-relative overflow-hidden">
-        <h2 class="fw-bold ms-sm-5 ps-sm-5 ps-3 text-space fs_8xl text-space">
-            News
-        </h2>
-        <p class="text-black ms-sm-5 ps-sm-5 ps-3 mb-0 pb-3 pt-2 text-space">
-            Developments, trends, and opinions that move us at Boddoohi &
-            Friedlander LLP, but also beyond.
-        </p>
-        <div class="slider-arrow">
-            <a href="#" class="slick-prev">
-                <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path class="hover_svg" d="M19.3706 25.5H61.4999V28.5H19.3706V33L10.4999 27L19.3706 21V25.5Z"
-                        fill="#FE6A5B"></path>
-                </svg>
-            </a>
-            <div class="slick-next transition_03">
-                <a href="#">
+    <!-- News Section  -->
+    <div class="mt-md-0 mt-5">
+        <div class="container mx-auto position-relative overflow-hidden">
+            <h2 class="fw-bold ms-sm-5 ps-sm-5 ps-3 text-space fs_8xl text-space">
+                News
+            </h2>
+            <p class="text-black ms-sm-5 ps-sm-5 ps-3 mb-0 pb-3 pt-2 text-space">
+                Developments, trends, and opinions that move us at Boddoohi &
+                Friedlander LLP, but also beyond.
+            </p>
+            <div class="slider-arrow">
+                <a href="#" class="slick-prev">
                     <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path class="hover_svg" d="M52.6294 25.5H10.5001V28.5H52.6294V33L61.5001 27L52.6294 21V25.5Z"
+                        <path class="hover_svg" d="M19.3706 25.5H61.4999V28.5H19.3706V33L10.4999 27L19.3706 21V25.5Z"
                             fill="#FE6A5B"></path>
                     </svg>
                 </a>
+                <div class="slick-next transition_03">
+                    <a href="#">
+                        <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="hover_svg"
+                                d="M52.6294 25.5H10.5001V28.5H52.6294V33L61.5001 27L52.6294 21V25.5Z" fill="#FE6A5B">
+                            </path>
+                        </svg>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="slider my-5 ms-sm-5 ps-sm-5 ps-3">
-            <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                <h3 class="fs_xl fw-bold text-space text-black mb-0">
-                    Another big win in the SDNY
-                </h3>
-                <p class="fs_sm text-normal text-black mb-0">
-                    This was round two in a battle between our client, a wonderful,
-                    well-known, and respected international travel company, and another
-                    travel company over purported claims of unfair competition under New
-                    York and California law. We obtained dismissal of the case once in
-                    August 2022, but the plaintiff was allowed to amend some of its
-                    claims. This time, Judge Valerie Caproni granted our motion and
-                    dismissed the amended complaint, with prejudice, and later awarded
-                    us costs and attorneys’ fees. York and California law. We obtained
-                    dismissal of the case once in August 2022, but the plaintiff was
-                    allowed to amend some of its claims. This time, Judge Valerie
-                    Caproni granted our motion and dismissed the amended complaint, with
-                    prejudice, and later awarded us costs and attorneys’ fees.
-                </p>
-            </div>
-            <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                    Esopus Updates Proposed Marina Camping Rules
-                </h3>
-                <p class="fs_sm text-normal text-black mb-0">
-                    On December 22, 2021, the New York State Legislature passed (and
-                    Governing Hochul signed into law) a law exempting cooperatives from
-                    several provisions of the HSTPA
-                </p>
-            </div>
-            <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                    Esopus Seeks to Revise Zoning for Marina RV Lodging
-                </h3>
-                <p class="fs_sm text-normal text-black mb-0">
-                    Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
-                    vs. Castaways Marina
-                </p>
-            </div>
-            <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                    Another big win in the SDNY
-                </h3>
-                <p class="fs_sm text-normal text-black mb-0">
-                    On December 22, 2021, the New York State Legislature passed (and
-                    Governing Hochul signed into law) a law exempting cooperatives from
-                    several provisions of the HSTPA
-                </p>
-            </div>
-            <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                    Esopus Seeks to Revise Zoning for Marina RV Lodging
-                </h3>
-                <p class="fs_sm text-normal text-black mb-0">
-                    Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
-                    vs. Castaways Marina
-                </p>
+            <div class="slider my-5 ms-sm-5 ps-sm-5 ps-3">
+                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Another big win in the SDNY
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        This was round two in a battle between our client, a wonderful,
+                        well-known, and respected international travel company, and another
+                        travel company over purported claims of unfair competition under New
+                        York and California law. We obtained dismissal of the case once in
+                        August 2022, but the plaintiff was allowed to amend some of its
+                        claims. This time, Judge Valerie Caproni granted our motion and
+                        dismissed the amended complaint, with prejudice, and later awarded
+                        us costs and attorneys’ fees. York and California law. We obtained
+                        dismissal of the case once in August 2022, but the plaintiff was
+                        allowed to amend some of its claims. This time, Judge Valerie
+                        Caproni granted our motion and dismissed the amended complaint, with
+                        prejudice, and later awarded us costs and attorneys’ fees.
+                    </p>
+                </div>
+                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                        Esopus Updates Proposed Marina Camping Rules
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        On December 22, 2021, the New York State Legislature passed (and
+                        Governing Hochul signed into law) a law exempting cooperatives from
+                        several provisions of the HSTPA
+                    </p>
+                </div>
+                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                        Esopus Seeks to Revise Zoning for Marina RV Lodging
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
+                        vs. Castaways Marina
+                    </p>
+                </div>
+                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                        Another big win in the SDNY
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        On December 22, 2021, the New York State Legislature passed (and
+                        Governing Hochul signed into law) a law exempting cooperatives from
+                        several provisions of the HSTPA
+                    </p>
+                </div>
+                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                        Esopus Seeks to Revise Zoning for Marina RV Lodging
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
+                        vs. Castaways Marina
+                    </p>
+                </div>
             </div>
         </div>
     </div>
