--- a/slider.html
+++ b/slider.html
@@ -23,16 +23,20 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <title>Slick Slider Example</title>
   </head>
   <body>
-    <div class="container mx-auto position-relative overflow-hidden">
-      <h2 class="fw-bold ms-sm-5 ps-sm-5 ps-3 text-space fs_8xl text-space">
-        News
+    <div class="my-container mx-auto position-relative overflow-hidden">
+      <h2
+        class="fw-bolder letter-05 ms-sm-5 ps-sm-5 ps-3 text-space fs_8xl text-space"
+      >
+        NEWS
       </h2>
-      <p class="text-black ms-sm-5 ps-sm-5 ps-3 mb-0 pb-3 pt-2 text-space">
+      <p
+        class="text-black fw-medium opacity-75 ms-sm-5 ps-sm-5 ps-3 mb-0 pb-3 pt-2 text-space"
+      >
         Developments, trends, and opinions that move us at Boddoohi &
         Friedlander LLP, but also beyond.
       </p>
       <div class="slider-arrow">
-        <a href="#" class="slick-prev">
+        <div class="slick-prev">
           <svg
             width="72"
             height="54"
@@ -46,9 +50,9 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
               fill="#FE6A5B"
             ></path>
           </svg>
-        </a>
+        </div>
         <div class="slick-next transition_03">
-          <a href="#">
+          <div>
             <svg
               width="72"
               height="54"
@@ -62,44 +66,46 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                 fill="#FE6A5B"
               ></path>
             </svg>
-          </a>
+          </div>
         </div>
       </div>
       <div class="slider my-5 ms-sm-5 ps-sm-5 ps-3">
         <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
           <h3 class="fs_xl fw-bold text-space text-black mb-0">
-            Another big win in the SDNY
+            Another big win in Kings County, Supreme Court
           </h3>
-          <p class="fs_sm text-normal text-black mb-0">
-            This was round two in a battle between our client, a wonderful,
-            well-known, and respected international travel company, and another
-            travel company over purported claims of unfair competition under New
-            York and California law. We obtained dismissal of the case once in
-            August 2022, but the plaintiff was allowed to amend some of its
-            claims. This time, Judge Valerie Caproni granted our motion and
-            dismissed the amended complaint, with prejudice, and later awarded
-            us costs and attorneys’ fees. York and California law. We obtained
-            dismissal of the case once in August 2022, but the plaintiff was
-            allowed to amend some of its claims. This time, Judge Valerie
-            Caproni granted our motion and dismissed the amended complaint, with
-            prejudice, and later awarded us costs and attorneys’ fees.
+          <p class="fs_sm mb-3 text-normal text-black mb-0">
+            We obtained outright dismissal of a claim brought involving two
+            separate real estate transactions, and claims under the New York
+            Debtor and Creditor Law (i.e., plaintiff claimed the two sales were
+            fraudulent conveyances designed to avoid the payment of a judgment).
+            The Commercial Division in Brooklyn agreed with us, and our
+            fantastic innocent-by-stander client, and dismissed the case
+            outright (and denied the plaintiff leave to amend), ruling
+            (correctly) that there was absolutely nothing wrong with the
+            transfers, in a well-reasoned, and interesting decision. (access it
+            <span class="text-red">here</span>)
           </p>
         </div>
         <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
           <h3 class="fs_xl fw_bold text-space text-black mb-0">
-            Esopus Updates Proposed Marina Camping Rules
+            Big win in the SDNY
           </h3>
-          <p class="fs_sm text-normal text-black mb-0">
-            On December 22, 2021, the New York State Legislature passed (and
-            Governing Hochul signed into law) a law exempting cooperatives from
-            several provisions of the HSTPA
+          <p class="fs_sm mb-3 text-normal text-black mb-0">
+            We obtained a massive win in Federal Court, in the Southern District
+            of New York, on behalf of our wonderful client, an international
+            travel company. In this internet unfair
+            competition/non-disparagement action, we obtained outright dismissal
+            of the complaint in a decision issued by the Hon. Valerie E.
+            Caproni. The decision was also written up in the New York Law
+            Journal (access it <span class="text-red">here</span>)
           </p>
         </div>
         <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
           <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal text-black mb-0">
+          <p class="fs_sm mb-3 text-normal text-black mb-0">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
@@ -108,7 +114,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Another big win in the SDNY
           </h3>
-          <p class="fs_sm text-normal text-black mb-0">
+          <p class="fs_sm mb-3 text-normal text-black mb-0">
             On December 22, 2021, the New York State Legislature passed (and
             Governing Hochul signed into law) a law exempting cooperatives from
             several provisions of the HSTPA
@@ -118,7 +124,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal text-black mb-0">
+          <p class="fs_sm mb-3 text-normal text-black mb-0">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
