--- a/slider.html
+++ b/slider.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BF Firm Law</title>
-    <link rel="stylesheet" href="/assests/scss/slider.css" />
-    <link rel="stylesheet" href="/assests/scss/root.css" />
-    <link rel="icon" href="/assests/images/icons/logo.svg " />
+    <link rel="stylesheet" href="/assets/scss/slider.css" />
+    <link rel="stylesheet" href="/assets/scss/root.css" />
+    <link rel="icon" href="/assets/images/icons/logo.svg " />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -134,6 +134,6 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <script src="
 https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js
 "></script>
-    <script src="/assests/js/style.js"></script>
+    <script src="/assets/js/style.js"></script>
   </body>
 </html>
